--- a/metabolights-webapps/src/main/webapp/css/metabolights.css
+++ b/metabolights-webapps/src/main/webapp/css/metabolights.css
@@ -145,3 +145,10 @@ body{
     margin: 5px;
     border: 1px solid #f1f1f4;
 }
+
+#transferDiv{
+    background-color:#f1f1f4;
+    padding: 10px;
+    border: 1px solid #D9D9D9;
+    margin-bottom: 30px;
+}
