Added Validations Overall Status in the search result

--- a/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/metabolights_test.css
@@ -901,3 +901,21 @@ ol.progtrckr li.progtrckr-todo:before {
     content: "\002713";
     font-weight: bold;
 }
+
+.redTrafficL::before{
+    content: "\002B24";
+    color: red;
+}
+.amberTrafficL::before{
+    content: "\002B24";
+    color: darkorange;
+}
+.greenTrafficL::before{
+    content: "\002B24";
+    color: green;
+}
+.offTrafficL::before{
+    content: "\002B24";
+    color: #bbb;
+}
+
