beta pages swap changes and CSS fixes

--- a/metabolights-webapps/src/main/webapp/css/metabolights.css
+++ b/metabolights-webapps/src/main/webapp/css/metabolights.css
@@ -200,7 +200,7 @@ body{
     width: calc(100% - 20px);
     margin: 15px 10px 5px 10px;
 
-    border-top: 3px solid #C58A4D;
+    border-top: 3px solid #C4C4C4;
     border-bottom: 1px solid #DBDCDE;
 
     padding: 20px 10px 10px 10px;
