Biology tab modal feature added

--- a/metabolights-webapps/src/main/webapp/css/metabolights.css
+++ b/metabolights-webapps/src/main/webapp/css/metabolights.css
@@ -329,6 +329,10 @@ a:link.hyperlinks{
     display: block;
 }
 
+.ml--button{
+    color: #fff !important;
+}
+
 .dropdown-submenu {
     position: relative;
 }
