Compound Beta Page changes

--- a/metabolights-webapps/src/main/webapp/css/MetCompound.css
+++ b/metabolights-webapps/src/main/webapp/css/MetCompound.css
@@ -199,5 +199,16 @@ nav#breadcrumb{
     cursor: pointer;
 }
 
+#snippetDiv{
+    height: 500px;
+    width: 100%;
 
+}
 
+.no-padding{
+    padding: 0;
+}
+
+.zoom-dialog{
+    width: 450px !important;
+}
