--- a/metabolights-webapps/src/main/webapp/cssrl/biojs.Rheaction.css
+++ b/metabolights-webapps/src/main/webapp/cssrl/biojs.Rheaction.css
@@ -10,7 +10,7 @@
 div.compound {
     display: table-cell;
     text-align: center;
-    background-color: #720A19;
+    background-color: #333;
     padding: 0.5ex 0.5em;
 }
 
