--- a/metabolights-webapps/src/main/webapp/css/metabolights.css
+++ b/metabolights-webapps/src/main/webapp/css/metabolights.css
@@ -419,3 +419,21 @@ a:link.btn-ok{
     border-radius: 0;
     margin-top: -10px;
 }
+
+.scrollToTop{
+    padding: 15px 20px;
+    text-align:center;
+    background: rgba(255,255,255, 0.7);
+    font-weight: bold;
+    color: #333;
+    text-decoration: none;
+    position:fixed;
+    bottom:50px;
+    right:50px;
+    border-radius: 4px;
+    border: 1px solid #F5F5F5;
+    display:none;
+}
+.scrollToTop:hover{
+    text-decoration:none;
+}
