Multiple assay MAF issue fix

--- a/metabolights-webapps/src/main/webapp/css/metabolights.css
+++ b/metabolights-webapps/src/main/webapp/css/metabolights.css
@@ -588,3 +588,12 @@ a:link.btn-ok{
 .ml-study-content .row{
     margin-bottom: 5px;
 }
+
+.no-bullets{
+    padding: 0 9px 0 0 !important;
+}
+
+.no-bullets li{
+    list-style: none !important;
+    text-indent: 0px !important;
+}
