--- a/metabolights-webservice/src/main/resources/email_template/studySubmissionConfirmationEmail.vm
+++ b/metabolights-webservice/src/main/resources/email_template/studySubmissionConfirmationEmail.vm
@@ -1,8 +1,8 @@
 We are happy to inform you that your submitted study ({0}) has been successfully processed.
 
-Your study is now identified in MetaboLights as {1}.
+Your study is now identified in MetaboLights as {1}. You can access your study here: {3}{1}.
 
-The public release date is {2}.
+The requested public release date is {2}.
 
 SUBMISSION CHECKLIST - Your study will not be published and made available to the world, until the following conditions have been satisfied:
 A. Stage 1 (ISAcreator) validation has successfully passed.
@@ -12,6 +12,20 @@ D. The curation team approves the study and moves the study status from In Curat
 E. Your public release date is reached.
 
 For private pre-publication access to your study, please see the "Share study" link at the top of the study page.
-Please note that the pre-publication link is only accessible when the study is in “In Review” status”.
+Please note that the pre-publication link is only accessible when the study is in "In Review" status”.
 
-Many thanks for your time and effort. You can access your study here: {3}{1}.
+
+Citing your submission in MetaboLights:
+
+Metabolomics data has been deposited to the EMBL-EBI MetaboLights database (DOI: 10.1093/nar/gks1004. PubMed PMID: 23109552) with the identifier {1}. 
+The complete dataset can be accessed here {3}{1}
+
+Citing MetaboLights generally:
+
+Kenneth Haug, Reza M. Salek, Pablo Conesa, Janna Hastings, Paula de Matos, Mark Rijnbeek, Tejasvi Mahendrakar, Mark Williams, Steffen Neumann, 
+Philippe Rocca-Serra, Eamonn Maguire, Alejandra González-Beltrán, Susanna-Assunta Sansone, Julian L. Griffin and Christoph Steinbeck.
+MetaboLights-- an open-access general-purpose repository for metabolomics studies and associated meta-data.
+Nucl. Acids Res. (2013) DOI: 10.1093/nar/gks1004. PubMed PMID: 23109552. Europe PMC: PMC3531110.
+
+
+Many thanks for your time and effort. 
