--- a/metabolights-webservice/src/main/resources/email_template/studySubmissionConfirmationEmail.vm
+++ b/metabolights-webservice/src/main/resources/email_template/studySubmissionConfirmationEmail.vm
@@ -17,15 +17,15 @@ Please note that the pre-publication link is only accessible when the study is i
 
 Citing your submission in MetaboLights:
 
-Metabolomics data has been deposited to the EMBL-EBI MetaboLights database (DOI: 10.1093/nar/gks1004. PubMed PMID: 23109552) with the identifier {1}. 
+Metabolomics data has been deposited to the EMBL-EBI MetaboLights database (DOI: 10.1093/nar/gks1004. PubMed PMID: 23109552) with the identifier {1}.
 The complete dataset can be accessed here {3}{1}
 
 Citing MetaboLights generally:
 
-Kenneth Haug, Reza M. Salek, Pablo Conesa, Janna Hastings, Paula de Matos, Mark Rijnbeek, Tejasvi Mahendrakar, Mark Williams, Steffen Neumann, 
-Philippe Rocca-Serra, Eamonn Maguire, Alejandra González-Beltrán, Susanna-Assunta Sansone, Julian L. Griffin and Christoph Steinbeck.
+Kenneth Haug, Reza M. Salek, Pablo Conesa, Janna Hastings, Paula de Matos, Mark Rijnbeek, Tejasvi Mahendrakar, Mark Williams, Steffen Neumann,
+Philippe Rocca-Serra, Eamonn Maguire, Alejandra Gonzalez-Beltran, Susanna-Assunta Sansone, Julian L. Griffin and Christoph Steinbeck.
 MetaboLights-- an open-access general-purpose repository for metabolomics studies and associated meta-data.
 Nucl. Acids Res. (2013) DOI: 10.1093/nar/gks1004. PubMed PMID: 23109552. Europe PMC: PMC3531110.
 
 
-Many thanks for your time and effort. 
+Many thanks for your time and effort.
