- Postgres backup fix - Corrected grammar in the submission email

--- a/metabolights-webapps/src/main/resources/email_template/studySubmissionConfirmationEmail.vm
+++ b/metabolights-webapps/src/main/resources/email_template/studySubmissionConfirmationEmail.vm
@@ -1,3 +1,4 @@
+--OLD --
 We are happy to inform you that your submitted study ({0}) has been successfully processed.
 
 Your study is now identified in MetaboLights as {1}.
