--- a/metabolights-webservice/src/main/resources/email_template/studySubmissionConfirmationEmail.vm
+++ b/metabolights-webservice/src/main/resources/email_template/studySubmissionConfirmationEmail.vm
@@ -17,7 +17,7 @@ Please note that the pre-publication link is only accessible when the study is i
 
 Citing your submission in MetaboLights:
 
-Metabolomics data has been deposited to the EMBL-EBI MetaboLights database (DOI: 10.1093/nar/gks1004. PubMed PMID: 23109552) with the identifier {1}.
+Metabolomics data have been deposited to the EMBL-EBI MetaboLights database (DOI: 10.1093/nar/gks1004. PubMed PMID: 23109552) with the identifier {1}.
 The complete dataset can be accessed here {3}{1}
 
 Citing MetaboLights generally:
