minor text tweaks

--- a/metabolights-webservice/src/main/resources/email_template/studySubmissionConfirmationEmail.vm
+++ b/metabolights-webservice/src/main/resources/email_template/studySubmissionConfirmationEmail.vm
@@ -22,10 +22,9 @@ The complete dataset can be accessed here {3}{1}
 
 Citing MetaboLights generally:
 
-Kenneth Haug, Reza M. Salek, Pablo Conesa, Janna Hastings, Paula de Matos, Mark Rijnbeek, Tejasvi Mahendrakar, Mark Williams, Steffen Neumann,
-Philippe Rocca-Serra, Eamonn Maguire, Alejandra Gonzalez-Beltran, Susanna-Assunta Sansone, Julian L. Griffin and Christoph Steinbeck.
-MetaboLights-- an open-access general-purpose repository for metabolomics studies and associated meta-data.
-Nucl. Acids Res. (2013) DOI: 10.1093/nar/gks1004. PubMed PMID: 23109552. Europe PMC: PMC3531110.
+Haug K., Salek R.M., Conesa P., Hastings J., de Matos P., Rijnbeek M., Mahendraker T., Williams M., Neumann S., Rocca-Serra P., et al.
+MetaboLights - an open-access general-purpose repository for metabolomics studies and associated meta-data.
+Nucleic Acids Res. 2013;41:D781-D786. doi:10.1093/nar/gks1004 PubMed PMID: 23109552. Europe PMC: PMC3531110.
 
 
 Many thanks for your time and effort.
