--- a/metabolights-webapps/src/main/webapp/css/MetCompound.css
+++ b/metabolights-webapps/src/main/webapp/css/MetCompound.css
@@ -9,6 +9,14 @@ div#content {
     padding-bottom: 5px;
 }
 
+.bnStyling{
+    font-style: italic;
+}
+
+.bnStyling:first-letter{
+    text-transform: uppercase;
+}
+
 nav#breadcrumb{
     padding-left: 20px;
 }
@@ -18,7 +26,6 @@ nav#breadcrumb{
     margin: 0 10px 12px 10px;
     padding: 0 0px;
 }
-
 
 .banner{
     background-color: #333;
