orcid claims display tweaks

--- a/metabolights-webapps/src/main/webapp/css/metabolights.css
+++ b/metabolights-webapps/src/main/webapp/css/metabolights.css
@@ -925,3 +925,7 @@ img:not(.imagecache-screenshot-carousel-img) {
 .text-white{
     color: #fff !important;
 }
+
+.popup-ajax:focus,.popup-ajax:active {
+    outline: none !important;
+}
